test/errors/executor/runtime_undeclared_identifier.ms
x = 1
x = noSuchThingy
x = 3
// Runtime Error - Undefined Identifier (Line 2, Column 17): Undeclared identifier "noSuchThingy"
